--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Houkibosi
 description: "Houkibosi Hub Site"
-url: "http://www.houkibosi.com"
+url: "https://www.houkibosi.com"
 
 
 # Delete the lines you don't need
